--- a/monshiners_alpha/public/index.html
+++ b/monshiners_alpha/public/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>monshiners</title>
+    <title>Monshiners'Obstbrand-handgemachter Schnaps aus Monheim am Rhein</title>
+    <meta name="description" content="Handgemachte Obstbrände aus Monheim am Rhein in limitierter Auflage.Vom Baum bis zur Flasche, alles aus einer Hand.&#9996; Jetzt schnell einkaufen. Solange der Vorrat reicht.'">
+    <meta property="og:title" content="Monshiners'Obstbrand - handgmachter Schabau aus dem Monheimer Rheinbogen"/>
+    <meta property="og:site_name" content="Monshiners' Obstbrand" />
+    <meta property=“og:description“ content="Original Monheimer Schnaps. Hergestellt aus dem Obst der Streuobstwiesen, des Monheimer Rheinbogens." />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
